@startuml
class ToolManager {
    + projectIsSaved : bool = true
    + CloseProject() : void
    + New() : void
    + Exit() : void
    + ExitNoSave() : void
}
class "Singleton`1"<T> {
}
"Singleton`1" "<ToolManager>" <|-- ToolManager
ToolManager --> "ssi" ScriptShaderInterface
ToolManager --> "processor" SpriteProcessor
ToolManager --> "mainMenu" Menu
ToolManager --> "exitModal" Transform
@enduml
